<resources>
    <string name="app_name">Tomodoro</string>
    <string name="logo_splash_screen_desciprtion">Logo Tomodoro Splash Screen</string>
    <string name="welcome">Welcome Back,</string>
    <string name="name">Syabab</string>
    <string name="main_exciting">New Exciting Tasks Waits You</string>
    <string name="getstarted">Get Started</string>
    <string name="timer">Timers</string>
    <string name="text">Productivity Article</string>
    <string name="article1">What is Pomodoro Technique?</string>
    <string name="moodboardtext">The App that solves all of your needs</string>
    <string name="moodboardtext2">this app is designed to help you manage your daily activities.</string>
    <string name="TitleTimer">Tomodoro Timer</string>
    <string name="start">Start</string>
    <string name="motivation">Keep Going!</string>
    <string name="motivation2">You\'re doing great!</string>
    <string name="motivationsource">-Your Spirit</string>
    <string name="article_detail">Productivity Article</string>
    <string name="min25">25 Minutes</string>
    <string name="min45">45 Minutes</string>
    <string name="min60">1 Hour</string>
    <string name="UserDesc">Image for Username</string>
    <string name="welcome_champ">Welcome Champ!</string>
    <string name="call_you">What should we call you?</string>
    <string name="on_click">You\'re one click away to get started!</string>
    <string name="get">Get Started!</string>

    //Quotes and Writer
    <string name="quote1">All big things come from small beginnings.</string>
    <string name="writer1">James Clear</string>

    <string name="quote2">The way to get started is to quit talking and begin doing.</string>
    <string name="writer2">Walt Disney</string>

    <string name="quote3">Focus on being productive instead of busy.</string>
    <string name="writer3">Tim Ferriss</string>

    <string name="quote4">Until we can manage time, we can manage nothing else.</string>
    <string name="writer4">Peter Drucker</string>

    <string name="quote5">The key to productivity is to rotate your avoidance techniques.</string>
    <string name="writer5">Shannon Wheeler</string>

    <string name="quote6">You must remain focused on your journey to greatness.</string>
    <string name="writer6">Les Brown</string>

    <string name="quote7">It is not the mountain we conquer, but ourselves.</string>
    <string name="writer7">Sir Edmund Hillary</string>
    <string name="pomodoro_technique">Pomodoro Technique</string>
    <string name="username">Username</string>
    <string name="tImer25">25:00</string>
    <string name="timer45">45:00</string>
    <string name="timer60">60:00</string>
</resources>