<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.pendekarsoftware.tomodoro.Timer.timer25.Timer25Activity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_color"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_back"
        app:title="@string/TitleTimer"
        app:titleTextAppearance="@style/ToolbarAppearance"
        app:titleTextColor="@color/white" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_marginBottom="80dp"
        app:cardBackgroundColor="@color/main_color"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="167dp">

            <TextView
                android:id="@+id/text_view_countdown"
                android:layout_width="220dp"
                android:layout_height="87dp"
                android:layout_marginBottom="28dp"
                android:fontFamily="@font/plusjakartasans_bold"
                android:gravity="center"
                android:text="@string/tImer25"
                android:textColor="@color/white"
                android:textSize="60sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/motivation1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:fontFamily="@font/plusjakartasans_semibold"
        android:text="@string/motivation"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/motivation2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-3dp"
        android:fontFamily="@font/plusjakartasans_semibold"
        android:text="@string/motivation2"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/motivation1" />

    <TextView
        android:id="@+id/motivationsource"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/plusjakartasans_semibold"
        android:text="@string/motivationsource"
        android:textColor="@color/silver"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/motivation2"
        app:layout_constraintStart_toStartOf="@id/motivation2"
        app:layout_constraintTop_toBottomOf="@id/motivation2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/pomodoro_technique"
        app:fontFamily="@font/plusjakartasans_semibold"
        android:textColor="@color/main_color"
        app:layout_constraintEnd_toEndOf="@+id/cardView3"
        app:layout_constraintStart_toStartOf="@+id/cardView3"
        app:layout_constraintTop_toBottomOf="@+id/cardView3" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/min25"
        android:textColor="@color/black"
        android:textSize="26sp"
        app:fontFamily="@font/plusjakartasans_bold"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <ImageView
        android:id="@+id/ivReset"
        android:layout_width="110dp"
        android:layout_height="80dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="@+id/cardView3"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:srcCompat="@drawable/iv_reset" />

    <ImageView
        android:id="@+id/ivStart"
        android:layout_width="110dp"
        android:layout_height="80dp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="@+id/cardView3"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:srcCompat="@drawable/iv_start" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="136dp"
        android:layout_height="12dp"
        android:layout_marginTop="160dp"
        app:layout_constraintEnd_toEndOf="@+id/ivReset"
        app:layout_constraintStart_toStartOf="@+id/ivStart"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:srcCompat="@drawable/vector" />

</androidx.constraintlayout.widget.ConstraintLayout>