<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MoodboardActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/moodboard" />

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="400dp"
        android:layout_marginTop="100dp"
        android:background="#FF8329"
        app:cardCornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FF8329">

            <Button
                android:id="@+id/btn_Start"
                android:layout_width="300dp"
                android:layout_height="71dp"
                android:fontFamily="@font/plusjakartasans_extrabold"
                android:text="@string/getstarted"
                android:textColor="#FF8329"
                android:textSize="16sp"
                app:cornerRadius="22dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="310dp"
                android:layout_height="84dp"
                android:layout_marginTop="40dp"
                android:fontFamily="@font/plusjakartasans_bold"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/moodboardtext"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="27sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.494"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="248dp"
                android:layout_height="50dp"
                android:layout_marginBottom="24dp"
                android:fontFamily="@font/plusjakartasans"
                android:text="@string/moodboardtext2"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/btn_Start"
                app:layout_constraintEnd_toEndOf="@+id/textView"
                app:layout_constraintStart_toStartOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@+id/textView" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>